@@ -1,4 +1,4 @@
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -39,7 +39,7 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework, Version=2.2.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
+    <Reference Include="nunit.framework, Version=2.2.9.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -50,20 +50,25 @@
     <Compile Include="ConfluentWaitHandle.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Rijndael\Rijndael.cs" />
+    <Compile Include="Rijndael\RijndaelTransform32.cs" />
+    <Compile Include="Rijndael\RijndaelTransform32Balanced.cs" />
+    <Compile Include="Rijndael\RijndaelTransform32HighSpeed.cs" />
     <Compile Include="SymmetricAlgorithmPlus.cs" />
     <Compile Include="SymmetricTransform.cs" />
     <Compile Include="Camellia\Camellia.cs" />
     <Compile Include="Camellia\CamelliaManaged.cs" />
     <Compile Include="Camellia\CamelliaTransform.cs" />
-    <Compile Include="Camellia\CamelliaTransform64LE.cs" />
     <Compile Include="Camellia\CamelliaTransformBE.cs" />
     <Compile Include="Camellia\CamelliaTransformLE.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rijndael\RijndaelManaged.cs" />
     <Compile Include="Tests\BlockCipherModeTest.cs" />
     <Compile Include="Tests\CamelliaTest.cs" />
     <Compile Include="Tests\ConfluentWaitHandleTest.cs" />
     <Compile Include="Tests\DummyAlgorithm.cs" />
     <Compile Include="Tests\PaddingModeTest.cs" />
+    <Compile Include="Tests\RijndaelTest.cs" />
     <Compile Include="Tests\SymmetricAlgorithmPlusTest.cs" />
     <Compile Include="Tests\SymmetricAlgorithmTestBase.cs" />
   </ItemGroup>
