@@ -1,5 +1,10 @@
 2007-01-21 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
 
+	* Program.cs: TESTビルド時は一部のテストだけを実行するように変更
+	* openCrypto.NET.csproj: 更新
+
+2007-01-21 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
+
 	* SymmetricTransform.cs: スレッド数が1でも、新たなスレッドを生成していたのを修正
 	(デバッグ用に有効にしていたのを直し忘れてた)
 
